Refactor extension.toml to update theme ID and name

--- a/extension.toml
+++ b/extension.toml
@@ -1,5 +1,5 @@
-id = "codestackr-zed-theme"
-name = "codeSTACKr Zed theme"
+id = "codestackr"
+name = "codeSTACKr"
 version = "0.0.1"
 schema_version = 1
 authors = ["Pjort Kat"]
